# LemonDB

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md
.gitea/ISSUE_TEMPLATE/: BUG_REPORT.md  NEW_FEATURE.md  PERF_REPORT.md
.gitea/workflows/: buildtest.yaml  push.yaml
gtests/: test_arith_query.cpp  test_copytable_query.cpp  test_count_query.cpp  test_delete_query.cpp  test_select_query.cpp  test_swap_query.cpp  test_truncate_query.cpp
hooks/: commit-msg  install-hooks.sh  pre-commit
scripts/: run-static-analysis.sh
src/: main.cpp
src/db/: Database.cpp  Database.h  Datum.h  QueryBase.h  Table.cpp  Table.h  TableLockManager.h  Table_impl.cpp  Tablelock.h  types.h
src/query/: Query.cpp  Query.h  QueryBuilders.cpp  QueryBuilders.h  QueryParser.cpp  QueryParser.h  QueryResult.cpp  QueryResult.h
src/query/data/: AddQuery.cpp  AddQuery.h  CountQuery.cpp  CountQuery.h  DeleteQuery.cpp  DeleteQuery.h  DuplicateQuery.cpp  DuplicateQuery.h  InsertQuery.cpp  InsertQuery.h  MaxQuery.cpp  MaxQuery.h  MinQuery.cpp  MinQuery.h  SelectQuery.cpp  SelectQuery.h  SubQuery.cpp  SubQuery.h  SumQuery.cpp  SumQuery.h  SwapQuery.cpp  SwapQuery.h  UpdateQuery.cpp  UpdateQuery.h
src/query/management/: CopyTableQuery.cpp  CopyTableQuery.h  DropTableQuery.cpp  DropTableQuery.h  DumpTableQuery.cpp  DumpTableQuery.h  ListTableQuery.cpp  ListTableQuery.h  LoadTableQuery.cpp  LoadTableQuery.h  PrintTableQuery.cpp  PrintTableQuery.h  QuitQuery.cpp  QuitQuery.h  TruncateTableQuery.cpp  TruncateTableQuery.h  WaitQuery.cpp  WaitQuery.h
src/query/utils/: ListenQuery.cpp  ListenQuery.h
src/threading/: Collector.cpp  Collector.h  OutputPool.cpp  OutputPool.h  QueryManager.cpp  QueryManager.h  Sched.h  Threadpool.cpp  Threadpool.h  collector.h  threadpool.cpp  threadpool.h
src/utils/: FileStackManager.cpp  FileStackManager.h  MainIOHelpers.cpp  MainIOHelpers.h  MainQueryHelpers.cpp  MainQueryHelpers.h  MainUtils.cpp  MainUtils.h  OutputConfig.cpp  OutputConfig.h  formatter.h  uexception.h
test/: clangtidy.sh  clangtidy_cleanup.sh  cppcheck.sh  cpplint.sh  gperftools.sh  gprof.sh  linecount.sh  run.sh  test_correctness.sh  test_multithread_listen.sh  valgrind.sh  verify_tables.py
test/gtests/: .clang-tidy  test_delete_query.cpp  test_duplicate_query.cpp  test_limits_query.cpp  test_truncate_query.cpp
tests/: select_tests.cpp  swap_tests.cpp  test_add_query.cpp  test_arith_query.cpp  test_copytable_query.cpp  test_count_query.cpp  test_delete_query.cpp  test_duplicate_query.cpp  test_example.cpp  test_limits_query.cpp  test_select_query.cpp  test_sum_query.cpp  test_swap_query.cpp  test_truncate_query.cpp
